--- a/orchestrator/config.yaml
+++ b/orchestrator/config.yaml
@@ -1,13 +1,21 @@
 # config/config.yaml
 
-env: "local" # Окружение - local, dev или prod
+env: "local"
 
-http_server: # конфигурация нашего http-сервера
+http_server:
   address: "localhost:8099"
   timeout: 5s
   idle_timeout: 60s
 storage:
-  path: "./storage.db"
+  user: "postgres"
+  dbname: "distributed_calculator"
+  password: "password"
+  host: "localhost"
+  post: "5432"
+  sslmode: "disable"
+
+operation:
+  count_operation: 4
   addition: 0
   subtraction: 0
   multiplication: 0
