--- a/orchestrator/config.yaml
+++ b/orchestrator/config.yaml
@@ -1,5 +1,3 @@
-# config/config.yaml
-
 env: "local"
 
 http_server:
@@ -13,6 +11,7 @@ storage:
   host: "localhost"
   post: "5432"
   sslmode: "disable"
+  url: "postgres://postgres:password@postgres:5432/distributed_calculator?sslmode=disable"
 
 operation:
   count_operation: 4
@@ -22,7 +21,7 @@ operation:
   division: 0
 
 quick_access_storage:
-  addr: "localhost:6379"
+  addr: "redis:6379"
   ttl: 60s
   password: ""
   db: 0
