--- a/config.yaml
+++ b/config.yaml
@@ -9,9 +9,9 @@ storage:
   dbname: "distributed_calculator"
   password: "password"
   host: "localhost"
-  post: "5432"
+  post: "8100"
   sslmode: "disable"
-  url: "postgres://postgres:password@postgres:5432/distributed_calculator?sslmode=disable"
+  url: "postgresql://postgres:password@localhost:8100/distributed_calculator?sslmode=disable"
 
 operation:
   count_operation: 4
@@ -21,7 +21,7 @@ operation:
   division: 0
 
 quick_access_storage:
-  addr: "redis:6379"
+  addr: "localhost:8101"
   ttl: 360s
   password: ""
   db: 0
