rename files and add go work

--- a/api_server/Dockerfile
+++ b/api_server/Dockerfile
@@ -1,25 +1,16 @@
-# Stage  1: Build the Go application
-FROM golang:1.21.6
+FROM golang:latest
 
-# Create a working directory
 WORKDIR /app
 
-# Copy go.mod and go.sum files
 COPY go.mod go.sum ./
 
-# Download all dependencies
 RUN go mod download
 
-# Copy the source code
-COPY .. .
+COPY . .
+COPY config.yaml ./config.yaml
 
-# Copy the config.yaml file
-COPY config.yaml /app/config.yaml
+RUN go build -o main .
 
 EXPOSE 8099
 
-# Build the application
-RUN CGO_ENABLED=0 go build -o /app/myapp
-
-# Start the application
-CMD ["/app/myapp"]
+CMD ["./main"]
