--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,8 @@ services:
     container_name: daec_orchestrator
     image: orchestrator:latest
     build:
-      dockerfile: api_server/Dockerfile
+      dockerfile: Dockerfile
+      context: ./api_server/
     depends_on:
       - postgres
       - redis
