--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,7 @@ services:
     container_name: daec_orchestrator
     image: orchestrator:latest
     build:
-      dockerfile: Dockerfile
-      context: ./api_server/
+      dockerfile: api_server/Dockerfile
     depends_on:
       - postgres
       - redis
