--- a/api_server/config.yaml
+++ b/api_server/config.yaml
@@ -13,13 +13,13 @@ storage:
   port: "8100"
   sslmode: "disable"
 
-
 operation:
   count_operation: 4
   addition: 0
   subtraction: 0
   multiplication: 0
   division: 0
+  permission_to_seed: true
 
 quick_access_storage:
   addr: "localhost:8101"
