create src cache

--- a/expression_solver/Dockerfile
+++ b/expression_solver/Dockerfile
@@ -1,4 +1,4 @@
-# running the file is required in the path../ to tighten dependencies in ../proto, ../internal and ../go.work
+# running the file is required in the path../ to tighten dependencies in ../internal and ../go.work
 FROM golang:latest
 
 WORKDIR /app
@@ -8,7 +8,9 @@ COPY ./api_server/ ./api_server
 COPY ./auth_service/ ./auth_service
 COPY ./internal/ ./internal
 COPY ./expression_solver/ ./expression_solver
+COPY ./src/ ./src
 
+ENV GOPATH=/app/src
 WORKDIR expression_solver
 RUN go build -o main .
 
