fix docker image size

--- a/api_server/Dockerfile
+++ b/api_server/Dockerfile
@@ -1,5 +1,6 @@
-# running the file is required in the path../ to tighten dependencies in ../internal and ../go.work
-FROM golang:latest
+# running the file is required in the path ../ to tighten dependencies in ../internal and ../src
+# First stage: build the application
+FROM golang:latest AS builder
 
 WORKDIR /app
 
@@ -9,7 +10,15 @@ COPY ./src/ ./src
 
 ENV GOPATH=/app/src
 WORKDIR api_server
-RUN go build -o main .
+RUN CGO_ENABLED=0 go build -ldflags '-extldflags "-static"' -o main .
+
+# Second stage: create the final image
+FROM scratch
+
+WORKDIR /app
+
+COPY --from=builder /app/api_server/main main
+COPY ./api_server/config.yaml config.yaml
 
 EXPOSE 8099
 
