--- a/auth_service/Dockerfile
+++ b/auth_service/Dockerfile
@@ -1,5 +1,6 @@
-# running the file is required in the path../ to tighten dependencies in ../internal and ../go.work
-FROM golang:latest
+# running the file is required in the path ../ to tighten dependencies in ../internal and ../src
+# First stage: build the application
+FROM golang:latest AS builder
 
 WORKDIR /app
 
@@ -9,7 +10,15 @@ COPY ./src/ ./src
 
 ENV GOPATH=/app/src
 WORKDIR auth_service
-RUN go build -o main .
+RUN CGO_ENABLED=0 go build -ldflags '-extldflags "-static"' -o main .
+
+# Second stage: create the final image
+FROM scratch
+
+WORKDIR /app
+
+COPY --from=builder /app/auth_service/main main
+COPY ./auth_service/config.yaml config.yaml
 
 EXPOSE 8102
 
